--- a/src/styles/app/sidebar.css
+++ b/src/styles/app/sidebar.css
@@ -9,6 +9,7 @@
     border-left: 1px solid white;
     border-right: 1px solid white;
     background-color: black;
+    min-height: fit-content;
 }
 
 /* Avatar & Socials ------------------ */
